Working create groups
